# voice2Subtitle

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_EN.md  start-backend.py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: exports.py  health.py  jobs.py  media.py  models.py  projects.py  subtitle_edits.py  subtitles.py
backend/app/services/: audio_extractor.py  file_utils.py  job_pipeline.py  media_probe.py  scanner.py  subtitle_writer.py  transcriber.py  translator.py
backend/app/workers/: __init__.py  processor.py  queue.py
backend/tests/: test_scanner.py  test_subtitle_writer.py
docs/plans/: 2026-05-26-voice2subtitle-web-workstation-design.md
docs/progress/: 2026-05-26-implementation-progress.md  2026-05-28-features-video-player-cancel-jobs.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/styles/: app.css
